# bakery

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/bar/: CMakeLists.txt
modules/bar/inc/: bar.hpp  export.hpp
modules/bar/inc/bar/: bar.hpp
modules/bar/src/: bar.cpp
modules/baz/: CMakeLists.txt
modules/baz/inc/: baz.hpp
modules/baz/inc/baz/: baz.hpp  export.hpp
modules/baz/src/: baz.cpp
modules/foo/: CMakeLists.txt
modules/foo/inc/: export.hpp  foo.hpp
modules/foo/inc/foo/: foo.hpp
modules/foo/src/: foo.cpp
